Bug 134038 - Calc Hangs When Clicking Auto Filter Dropdown List
Summary: Calc Hangs When Clicking Auto Filter Dropdown List
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2020-06-16 11:49 UTC by Kevin Suo
Modified: 2020-06-26 06:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2020-06-16 11:49:54 UTC
When testing bug 122419, I discovered that the following commit seems to have caused a regression:

2020-06-12 20:03:54 +0200 a16e6122dc62f545df90b9ea4d1f4723c46336b6
author	Caolán McNamara
weld checklistmenu

Steps to Reproduce:
1. Open attachment 147932 [details], and click on the auto filter dropdown list.

Current Result:
Calc hangs, can not open the dropdown list.

Expected:
Dropdown list should show up in some seconds.


Version: 7.1.0.0.alpha0+
Build ID: a16e6122dc62f545df90b9ea4d1f4723c46336b6
CPU 线程: 4; 操作系统: Linux 5.6; UI 渲染: 默认; VCL: gtk3
Locale: zh-CN (zh_CN.UTF-8); UI: zh-CN
Calc: threaded
Fedora 32 x64.
Comment 1 Kevin Suo 2020-06-16 11:52:36 UTC
Actually, I am only sure the regression is in the following range: fc0cc8fd1ae92eed355e8569fd5ba2fa7cf0cc40..a16e6122dc62f545df90b9ea4d1f4723c46336b6
where a16e6122dc62f545df90b9ea4d1f4723c46336b6 seems to be the most related.

Adding Caolán to cc list: would you please take a look? Thanks.
Comment 2 Caolán McNamara 2020-06-16 13:32:09 UTC
I think its super slow rather than fully frozen
Comment 3 Commit Notification 2020-06-16 20:34:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fa4ae1b318fef5984303f5906a9391d33d46bed7

tdf#134038 insert in optimal order

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2020-06-16 20:36:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f51ea6c297d17299c93e0560a9b4f90ebc2446d4

tdf#134038 use mnCheckWidthReq to avoid text width calculation

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2020-06-17 10:22:02 UTC
seems to be responsive now
Comment 6 Kevin Suo 2020-06-17 10:41:11 UTC
I confirm it is now fixed on master. The other issue as reported in bug 122419 still persists.