tdf#134038 insert in optimal order

Change-Id: I7b3d2b7bb37f4a7de118b4654f63bcc18a24b855